k8s/etapa-2.4/deployment-api-transacoes-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-transacoes
  namespace: tipsbank-transacoes
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-transacoes
  template:
    metadata:
      labels:
        app: api-transacoes
        version: v1
    spec:
      securityContext:
        fsGroup: 65532

      containers:
      - name: api-transacoes
        image: ghcr.io/brunosantostecinf-shell/tipsbank-api-transacoes:v1.0.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: app-logs
          mountPath: /var/log/app

      - name: log-forwarder
        image: busybox:1.36
        command:
        - sh
        - -c
        - |
          echo "Iniciando sidecar..."
          tail -F /var/log/app/app.log
        volumeMounts:
        - name: app-logs
          mountPath: /var/log/app

      volumes:
      - name: app-logs
        emptyDir: {}

      imagePullSecrets:
      - name: registry-secret
