k8s/etapa-2.4/deployment-api-transacoes-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-transacoes-v2
  namespace: tipsbank-transacoes
spec:
  replicas: 2

  selector:
    matchLabels:
      app: api-transacoes
      version: v2

  template:
    metadata:
      labels:
        app: api-transacoes
        version: v2

    spec:
      securityContext:
        fsGroup: 65532

      containers:

      - name: api-transacoes
        image: ghcr.io/brunosantostecinf-shell/tipsbank-api-transacoes:v2.0.0
        imagePullPolicy: Always

        ports:
        - containerPort: 8080

        volumeMounts:
        - name: app-logs
          mountPath: /var/log/app

      - name: log-forwarder
        image: busybox:1.36

        command:
        - sh
        - -c
        - |
          mkdir -p /var/log/app
          chmod -R 777 /var/log/app
          touch /var/log/app/app.log
          tail -F /var/log/app/app.log

        volumeMounts:
        - name: app-logs
          mountPath: /var/log/app

      volumes:
      - name: app-logs
        emptyDir: {}

      imagePullSecrets:
      - name: registry-secret
