k8s/etapa-2.4/svc-api-transacoes-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-transacoes
  namespace: tipsbank-transacoes
spec:
  type: ClusterIP
  selector:
    app: api-transacoes
    version: v1
  ports:
  - name: http
    port: 8080
    targetPort: 8080
