k8s/etapa-2.4/ingress-transacoes-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-transacoes-canary
  namespace: tipsbank-transacoes
  annotations:
    cert-manager.io/cluster-issuer: tipsbank-selfsigned
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - api.tipsbank.local
      secretName: api-transacoes-tipsbank-tls

  rules:
    - host: api.tipsbank.local
      http:
        paths:
          - path: /transacoes(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-transacoes-v2
                port:
                  number: 8080
